--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,11 @@
   crossorigin="anonymous"
 />
 
-<script
-  src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
-  crossorigin></script>
+
 
 </head>
 <body>
     <div id="root"></div>
 </body>
-<script src="../src/index.js"></script>
+<!-- <script src="../src/index.js"></script> -->
 </html>
